# audiobook-converter

./: .gitignore  DEPLOY_HF.md  LICENSE  README.md  README_HF.md  app.py  app_demo.py  app_hf.py  audio_processor.py  audio_processor_backup.py  main.py  pyproject.toml  requirements.txt  requirements_demo.txt  requirements_hf.txt  requirements_spaces.txt  text_processor.py  voices.py
