[project]
name = "owld"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "ebooklib>=0.20",
    "kokoro>=0.9.4",
    "numpy>=2.3.4",
    "openai>=2.7.2",
    "pypdf2>=3.0.1",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
]
