[project]
name = "audiobook-converter"
version = "1.0.0"
description = "Convert PDF and EPUB books to audiobooks using AI voices"
authors = [
    { name = "Leonardo Pizzoquero", email = "leonardo.pizzoquero@outlook.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
keywords = ["audiobook", "tts", "pdf", "epub", "ai", "voice", "gradio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing",
]

dependencies = [
    "gradio>=4.0.0",
    "beautifulsoup4>=4.14.2",
    "ebooklib>=0.20",
    "kokoro>=0.9.4",
    "numpy>=2.3.4",
    "pypdf2>=3.0.1",
    "soundfile>=0.13.1",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/LeonardoPizzoquero/audiobook-converter"
Repository = "https://github.com/LeonardoPizzoquero/audiobook-converter.git"
Issues = "https://github.com/LeonardoPizzoquero/audiobook-converter/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
