[project]
name = "audiobook-converter"
version = "1.0.0"
description = "Convert PDF and EPUB books to audiobooks using AI voices"
authors = [
    { name = "Leonardo Pizzoquero", email = "leonardo.pizzoquero@outlook.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["audiobook", "tts", "pdf", "epub", "ai", "voice", "gradio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing",
]

dependencies = [
    "gradio>=4.0.0",
    "beautifulsoup4>=4.12.0",
    "ebooklib>=0.18",
    "kokoro>=0.9.0",
    "numpy>=1.24.0",
    "pypdf2>=3.0.0",
    "soundfile>=0.12.0",
    "tqdm>=4.60.0",
]

[project.urls]
Homepage = "https://github.com/LeonardoPizzoquero/audiobook-converter"
Repository = "https://github.com/LeonardoPizzoquero/audiobook-converter.git"
Issues = "https://github.com/LeonardoPizzoquero/audiobook-converter/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
